# ChangeLog for rox-base/mime-editor
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/mime-editor/ChangeLog,v 1.11 2007/11/15 19:41:09 drac Exp $

  15 Nov 2007; Samuli Suominen <drac@gentoo.org> mime-editor-0.5-r1.ebuild:
  amd64 stable wrt #197514

  30 Oct 2007; Ferris McCormick <fmccor@gentoo.org>
  mime-editor-0.5-r1.ebuild:
  Add ~sparc (bookkeeping); AppRun runs.

*mime-editor-0.5-r1 (30 Jan 2007)

  30 Jan 2007; Jim Ramsay <lack@gentoo.org> +mime-editor-0.5-r1.ebuild:
  Added APPCATEGORY so a .desktop file will be installed

  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  mime-editor-0.5.ebuild:
  stable x86, bug #155521

  17 Nov 2006; Jim Ramsay <lack@gentoo.org> -mime-editor-0.1.3.ebuild:
  Ebuild cleanup - Removed old 0.1.3 version

  01 Nov 2006; Jim Ramsay <lack@gentoo.org> metadata.xml:
  Now owned by new rox herd

  04 Oct 2006; Jim Ramsay <lack@gentoo.org> mime-editor-0.5.ebuild:
  Fixed order of version variables for 'include rox'

*mime-editor-0.5 (29 Sep 2006)

  29 Sep 2006; <lack@gentoo.org> metadata.xml, +mime-editor-0.5.ebuild:
  Version bump to 0.5, and accepting maintainer role

  23 May 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove svyatogor from metadata, bug 131936.

  25 Jun 2005; Simon Stelling <blubb@gentoo.org> mime-editor-0.1.3.ebuild:
  added ~amd64 keyword

*mime-editor-0.1.3 (27 Nov 2004)

  27 Nov 2004; Sergey Kuleshov <svyatogor@gentoo.org> +metadata.xml,
  +mime-editor-0.1.3.ebuild:
  First commit of mimer-editor. Thanks to Alexandr Simonov <devil@gentoo.org.ua>
  (Bug #51996) for the ebuild.
