@@ -3,21 +3,14 @@ EBUILD mime-editor-0.5-r1.ebuild 532 RMD160 2ef30fc600f5326dedb05d5786e608f3d5ca
 MD5 57d9d2b09cfbb83d9d533737703c1dce mime-editor-0.5-r1.ebuild 532
 RMD160 2ef30fc600f5326dedb05d5786e608f3d5ca3b63 mime-editor-0.5-r1.ebuild 532
 SHA256 d0261e39575deeebd28d6397121a777b6826cee233303d97330af190b159692c mime-editor-0.5-r1.ebuild 532
-EBUILD mime-editor-0.5.ebuild 498 RMD160 257977e8eb7ea6f4c9b7689f537577a5a6176440 SHA1 3156035a085c7ea9a5911ae9912090e5c31fd1b1 SHA256 2aa534c387910b48bd7b73c3d95e5d52834b2e1dfbd14cdedd51426eb21299e9
-MD5 9116ebf5ef0c8b3b678fa126fdaac16b mime-editor-0.5.ebuild 498
-RMD160 257977e8eb7ea6f4c9b7689f537577a5a6176440 mime-editor-0.5.ebuild 498
-SHA256 2aa534c387910b48bd7b73c3d95e5d52834b2e1dfbd14cdedd51426eb21299e9 mime-editor-0.5.ebuild 498
-MISC ChangeLog 1654 RMD160 2a8d1be371ade5d06fdf89a102a4c481666bad63 SHA1 17b8098f09ef2976c2a843e72e81a58576194c80 SHA256 614231fa2da7e3c38ca3da42d8ecd97582e18bb1a9bd1944d1b6980d00fcb47c
-MD5 95197222bc3174400ebcab6b1c211f8e ChangeLog 1654
-RMD160 2a8d1be371ade5d06fdf89a102a4c481666bad63 ChangeLog 1654
-SHA256 614231fa2da7e3c38ca3da42d8ecd97582e18bb1a9bd1944d1b6980d00fcb47c ChangeLog 1654
+MISC ChangeLog 1742 RMD160 bea43e60130df1bd20176dde1db2ba0d6868c94e SHA1 d255cdbdd8e2c97ddbc1dea31621e859a87b8030 SHA256 9fbd2f25fa0368bed1222b3d0ff17b930024f696a8afd153e131cb6aea381203
+MD5 ba6d0f390bcf8dec2d7445e515c0bc2e ChangeLog 1742
+RMD160 bea43e60130df1bd20176dde1db2ba0d6868c94e ChangeLog 1742
+SHA256 9fbd2f25fa0368bed1222b3d0ff17b930024f696a8afd153e131cb6aea381203 ChangeLog 1742
 MISC metadata.xml 157 RMD160 fd6d83b802caa82822e8bb4d1752063fcda9b47f SHA1 54ccd31d923f052c9111f04c1a7d8b8f04f0a7b2 SHA256 941fe96a972d5a4f49555c01cbfab71d51e81ade3a53322fee549061aa17012c
 MD5 94ae74afbf5ec6b3f8cdcb4ea7c917bb metadata.xml 157
 RMD160 fd6d83b802caa82822e8bb4d1752063fcda9b47f metadata.xml 157
 SHA256 941fe96a972d5a4f49555c01cbfab71d51e81ade3a53322fee549061aa17012c metadata.xml 157
-MD5 afef4df8b39605f6f544556e44ef06e0 files/digest-mime-editor-0.5 235
-RMD160 5fa63a89de5642d73ce2ba818aaf39efabfd4622 files/digest-mime-editor-0.5 235
-SHA256 3e281f3ce5dc5d4adc20e55da4061004d37f6a82f4d8b2ce1ce8ef5414f24200 files/digest-mime-editor-0.5 235
 MD5 afef4df8b39605f6f544556e44ef06e0 files/digest-mime-editor-0.5-r1 235
 RMD160 5fa63a89de5642d73ce2ba818aaf39efabfd4622 files/digest-mime-editor-0.5-r1 235
 SHA256 3e281f3ce5dc5d4adc20e55da4061004d37f6a82f4d8b2ce1ce8ef5414f24200 files/digest-mime-editor-0.5-r1 235
