@@ -1,3 +1,0 @@
-MD5 a86d3d6b70bbce58abb6d393a9e8eede mime-editor-0.5.tgz 31842
-RMD160 b1891c61038cbc2ada5ff9b48ccf297cbbd05e00 mime-editor-0.5.tgz 31842
-SHA256 a1a4ec25083b7805be1f9c305583c915df282ee6e9d2a858f6a1f319d0629480 mime-editor-0.5.tgz 31842
