@@ -1,17 +1,0 @@
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/rox-base/cvs-repo/gentoo-x86/rox-base/mime-editor/Attic/mime-editor-0.5.ebuild,v 1.3 2006/11/20 18:10:19 opfer Exp $
-
-ROX_LIB_VER=0.9.14
-inherit rox
-
-DESCRIPTION="MIME-Editor is editor for the Shared MIME Database for ROX Desktop"
-HOMEPAGE="http://rox.sourceforge.net/"
-SRC_URI="mirror://sourceforge/rox/${P}.tgz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 x86"
-IUSE=""
-
-APPNAME=MIME-Editor
